connect to  netfily form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <div class="wrapper">
-            <form>
+            <form name="contact" netflify>
                 <h1>Login</h1>
                 <p>welcome back please login to your account</p>
                 <label for="text">Name</label>
@@ -31,7 +31,7 @@
                     </div>
                     <p>forgot password?</p>
                 </div>
-                <button>Login</button>
+                <button type="submit">Login</button>
             </form>
             <div class="signup">
                 <p>Don't have an account?</p>
