connect form to netlify

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <div class="wrapper">
-            <form name="contact" netflify>
+            <form name="contact" netlify>
                 <h1>Login</h1>
                 <p>welcome back please login to your account</p>
                 <label for="text">Name</label>
